# sursface

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: build.yaml  flake-ci.yaml
examples/: Cargo.toml
examples/src/cube_camera/: main.rs
examples/src/hello_triangle/: main.rs
examples/src/hello_window/: main.rs
examples/src/mandelbrot/: main.rs
examples/src/mandelbrot/assets/: shader.wgsl
sursface/: Cargo.toml
sursface/src/: app.rs  lib.rs  time.rs
sursface/src/display/: mod.rs
sursface/src/std/: mod.rs
