[package]
name = "sursface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "sursface"
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
pollster = "0.4.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Performance"] }
wgpu = { version = "24.0.1", features = ["webgl"] }
winit = "0.30.9"
fern = "0.7.1"
wasm-bindgen-futures = "0.4.50"
web-time = "1.1.0"
console_log = "1.0.0"
log = "0.4.25"
cgmath = "0.18.0"
image = "0.25.5"
env_logger = "0.11.6"
bytemuck = "1.21.0"
lazy_static = "1.5.0"
wasm-timer = "0.2.5"
