[package]
name = "sursface"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Small cross-platform rendering library"
repository = "https://github.com/boralg/sursface"
readme = "../README.md"
keywords = ["graphics", "webgpu", "rendering", "wasm", "gamedev"]
categories = ["graphics", "games", "rendering", "wasm", "web-programming"]

[lib]
crate-type = ["lib", "cdylib"]
name = "sursface"
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
pollster = "0.4.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Performance"] }
wgpu = { version = "24.0.3", features = ["webgl"] }
winit = "0.30.9"
fern = "0.7.1"
wasm-bindgen-futures = "0.4.50"
web-time = "1.1.0"
console_log = "1.0.0"
log = "0.4.27"
image = "0.25.6"
env_logger = "0.11.8"
bytemuck = "1.22.0"
lazy_static = "1.5.0"
